--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <span>Group Member</span>
     <ul>
         <li>Nan Li</li>
+        <li>Dennis</li>
+        <li>Ji Min</li>
     </ul>
     <div id="container"></div>
     <script type="module" src="index.js"></script>
