--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     <button id="lightMove"> lightMove</button>
     <br>
     <video width="400" height="400" controls> 
-      <source src="assets/Result.mp4" type="video/mp4">
+      <source src="assets/result/Result.mp4" type="video/mp4">
     </video>
     <h3>Presentation</h3>
     <div>
-      <iframe src="assets/CG - Group4 Final Presentation.pdf" style="width:100%;height:700px;"></iframe>
+      <iframe src="assets/result/CG - Group4 Final Presentation.pdf" style="width:100%;height:700px;"></iframe>
     </div>
 </body>
 <style>
